--- a/index.html
+++ b/index.html
@@ -214,3 +214,20 @@
   </script>
 </body>
 </html>
+
+<!--
+INITIALIZE GIT
+git init
+git add .
+git commit -m "Initial commit"
+
+LINK TO GITHUB
+git remote add origin https://github.com/your-username/your-repo-name.git
+git branch -M main
+git push -u origin main
+
+UPDATE REPO
+git add .
+git commit -m "Updated webpage"
+git push origin main
+-->
