--- a/index.html
+++ b/index.html
@@ -169,55 +169,52 @@
     });
 
     runBtn.addEventListener('click', () => {
-      if (!workbook) return alert('Please upload a file first');
-      const sheetName = workbook.SheetNames[0];
-      const sheet = workbook.Sheets[sheetName];
-      const json = XLSX.utils.sheet_to_json(sheet, { header: 1 });
-      const selections = document.getElementById('selections').value.split(',').map(s => s.trim());
-      downloadLinks.innerHTML = '';
+  if (!workbook) return alert('Please upload a file first');
+  const sheetName = workbook.SheetNames[0];
+  const sheet = workbook.Sheets[sheetName];
+  const json = XLSX.utils.sheet_to_json(sheet, { header: 1 });
+  const selections = document.getElementById('selections').value.split(',').map(s => s.trim());
+  downloadLinks.innerHTML = '';
 
-      if (mode === 'columns') {
-        const headers = json[0];
-        selections.forEach(col => {
-          const idx = headers.indexOf(col);
-          if (idx > -1) {
-            const newData = json.map(row => [row[idx]]);
-            const newWs = XLSX.utils.aoa_to_sheet(newData);
-            const newWb = XLSX.utils.book_new();
-            XLSX.utils.book_append_sheet(newWb, newWs, col);
-            const wbout = XLSX.write(newWb, { bookType: 'xlsx', type: 'array' });
-            const blob = new Blob([wbout], { type: 'application/octet-stream' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = `${col}.xlsx`;
-            a.textContent = `Download ${col}`;
-            a.className = 'block text-blue-600 hover:underline';
-            downloadLinks.appendChild(a);
-          }
-        });
-      } else if (mode === 'rows') {
-        const dataRows = json.slice(1);
-        selections.forEach(r => {
-          const idx = parseInt(r, 10) - 1;
-          if (idx >= 0 && idx < dataRows.length) {
-            const newData = [json[0], dataRows[idx]];
-            const newWs = XLSX.utils.aoa_to_sheet(newData);
-            const newWb = XLSX.utils.book_new();
-            XLSX.utils.book_append_sheet(newWb, newWs, `Row${r}`);
-            const wbout = XLSX.write(newWb, { bookType: 'xlsx', type: 'array' });
-            const blob = new Blob([wbout], { type: 'application/octet-stream' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = `row_${r}.xlsx`;
-            a.textContent = `Download row ${r}`;
-            a.className = 'block text-blue-600 hover:underline';
-            downloadLinks.appendChild(a);
-          }
-        });
-      }
-    });
+  if (mode === 'columns') {
+    const headers = json[0];
+    const indices = selections.map(col => headers.indexOf(col)).filter(i => i !== -1);
+    if (indices.length === 0) return alert('No valid columns selected');
+
+    const newData = json.map(row => indices.map(i => row[i]));
+    const newWs = XLSX.utils.aoa_to_sheet(newData);
+    const newWb = XLSX.utils.book_new();
+    XLSX.utils.book_append_sheet(newWb, newWs, 'Selected Columns');
+    const wbout = XLSX.write(newWb, { bookType: 'xlsx', type: 'array' });
+    const blob = new Blob([wbout], { type: 'application/octet-stream' });
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href = url;
+    a.download = 'selected_columns.xlsx';
+    a.textContent = 'Download Selected Columns';
+    a.className = 'block text-blue-600 hover:underline';
+    downloadLinks.appendChild(a);
+  } else if (mode === 'rows') {
+    const dataRows = json.slice(1);
+    const indices = selections.map(r => parseInt(r, 10) - 1).filter(i => i >= 0 && i < dataRows.length);
+    if (indices.length === 0) return alert('No valid rows selected');
+
+    const newData = [json[0], ...indices.map(i => dataRows[i])];
+    const newWs = XLSX.utils.aoa_to_sheet(newData);
+    const newWb = XLSX.utils.book_new();
+    XLSX.utils.book_append_sheet(newWb, newWs, 'Selected Rows');
+    const wbout = XLSX.write(newWb, { bookType: 'xlsx', type: 'array' });
+    const blob = new Blob([wbout], { type: 'application/octet-stream' });
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href = url;
+    a.download = 'selected_rows.xlsx';
+    a.textContent = 'Download Selected Rows';
+    a.className = 'block text-blue-600 hover:underline';
+    downloadLinks.appendChild(a);
+  }
+});
+
   </script>
 </body>
 </html>
